apps/templates/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-router
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocdnode.attias.io`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    certResolver: le
