apps/templates/couchdb.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: couchdb-router
  namespace: documents
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`couchdb.node.attias.io`)
      kind: Rule
      services:
        - name: couchdb-svc-couchdb
          port: 5984
      priority: 10
  tls:
    certResolver: le
