apps/templates/headlamp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-router
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headlamp.node.attias.io`)
      kind: Rule
      services:
        - name: headlamp
          port: 80
      priority: 10
  tls:
    certResolver: le
