apps/templates/k0s-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: k0s-router
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`k0s.node.attias.io`)
      kind: Rule
      services:
        - name: kubernetes-dashboard-web
          port: 8000
  tls:
    certResolver: le
